# edgetx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_muffin.md
cmake/: Macros.cmake
companion/src/firmwares/: moduledata.cpp  moduledata.h
companion/src/firmwares/edgetx/: yaml_moduledata.cpp
esp32_build/: CMakeLists.txt  sdkconfig
esp32_build/components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.h
esp32_build/components/lvgl_esp32_drivers/lvgl_tft/: disp_driver.c  disp_mcu.c  esp_lcd_panel_ili9488.c
esp32_build/components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.c
esp32_build/main/: CMakeLists.txt
radio/src/: CMakeLists.txt  FreeRTOSConfig.h  audio.cpp  audio.h  dataconstants.h  datastructs.h  datastructs_private.h  debug.cpp  debug.h  definitions.h  globals.h  logs.cpp  lv_conf.h  main.cpp  model_init.cpp  opentx.cpp  opentx.h  rtc.cpp  rtos.h  serial.cpp  switches.cpp  syscalls.c  tasks.cpp  tasks.h  translations.h
radio/src/bitmaps/480x272/: CMakeLists.txt
radio/src/gui/: gui_common.cpp
radio/src/gui/128x64/: menus.h  model_flightmodes.cpp  model_setup.cpp  model_special_functions.cpp  view_main.cpp  widgets.cpp
radio/src/gui/212x64/: model_setup.cpp
radio/src/gui/colorlcd/: CMakeLists.txt  LvglWrapper.cpp  bitmaps.cpp  colors.h  draw_functions.cpp  lcd.cpp  menu_radio.cpp  menus.h  module_setup.cpp  radio_diaganas.cpp  radio_sdmanager.cpp  radio_wifi.cpp  special_functions.cpp
radio/src/gui/common/stdlcd/: radio_hardware.cpp  radio_sdmanager.cpp  radio_version.cpp
radio/src/hal/: module_driver.h
radio/src/io/: multi_protolist.cpp  multi_protolist.h
radio/src/lua/: api_general.cpp  interface.cpp  lua_api.h  lua_widget.cpp
radio/src/pulses/: crossfire.cpp  modules_constants.h  modules_helpers.h  pulses.cpp
radio/src/storage/: sdcard_yaml.cpp
radio/src/storage/yaml/: CMakeLists.txt  yaml_datastructs.cpp  yaml_datastructs_128x64.cpp  yaml_datastructs_muffin.cpp  yaml_datastructs_nv14.cpp  yaml_datastructs_pl18.cpp  yaml_datastructs_t15.cpp  yaml_datastructs_t20.cpp  yaml_datastructs_tpro.cpp  yaml_datastructs_x12s.cpp  yaml_datastructs_x9d.cpp  yaml_datastructs_x9e.cpp  yaml_datastructs_xlites.cpp  yaml_labelslist.cpp  yaml_node.h
radio/src/targets/common/arm/stm32/: stm32_hal_adc.cpp
radio/src/targets/common/esp32/: CMakeLists.txt  adc_hal_driver.cpp  aux_serial_driver.cpp  board_common.h  diskio_spi.cpp  esp32_rmt_pulse.h  esp32_rmt_pulse_driver.cpp  esp32_rmt_uart.cpp  esp32_uart_driver.cpp  esp32_uart_driver.h  i2c_driver.cpp  i2c_driver.h  intmodule_serial_driver.cpp  mixer_scheduler_driver.cpp  module_drivers.cpp  pulses_bt_powerup.cpp  pulses_espnow.cpp  sound_i2s.cpp  timers_driver.cpp  usb_driver.cpp
radio/src/targets/muffin/: CMakeLists.txt  ads1015_adc.cpp  ads1x15.h  backlight_driver.cpp  board.cpp  board.h  flyskyHallStick_driver.cpp  hal.h  haptic_driver.cpp  keys_driver.cpp  lcd_lvgl_esp.cpp  mcp23017_io_driver.cpp  mcp23xxx.h  mcp_pins.h  module_drivers.cpp  rtc_driver.cpp  sh1107.cpp  sh1107_top_lcd.cpp  switch_driver.cpp  telemetry_driver.cpp  top_lcd_driver.cpp  trainer_driver.cpp
radio/src/targets/muffin/esp32_build/: sdkconfig
radio/src/targets/simu/: opentxsimulator.cpp  simpgmspace.cpp
radio/src/targets/taranis/: CMakeLists.txt  board.h
radio/src/telemetry/: flysky_ibus.cpp  frsky.h  multi.cpp  telemetry.cpp  telemetry_sensors.h
radio/src/tests/: conversions.cpp  functions.cpp  lcd.cpp  switches.cpp
radio/src/translations/: cn.h  cz.h  da.h  de.h  en.h  es.h  fi.h  fr.h  jp.h  nl.h  pl.h  se.h  tw.h  untranslated.h
radio/util/: find_clang.py
radio/util/hw_defs/: ads1015_adc_inputs.jinja  legacy_names.py  mcp23017_keys.jinja  mcp23017_switches.jinja  pot_config.py  switch_config.py
tools/: generate-yaml.sh
